# localcoder

./: .gitattributes  .gitignore  .npmrc  404.html  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  python-worker.js  racket-worker.js  vite.config.ts  wasi-utils.js
.github/: copilot-instructions.md
.github/workflows/: build-executors.yml  deploy-gh-pages.yml
assets/: 001-two-sum-m6hxbZza.js  002-reverse-string-WctxXLrg.js  003-valid-palindrome-Dz-ZYuwp.js  004-maximum-subarray-TN-FIWMf.js  005-merge-two-sorted-lists-Bqs6rCGl.js  006-longest-substring-without-repeating-HyhHAH36.js  index-1C_xv3FU.css  index-BDBqocE4.css  index-BGvFJ-tD.css  index-CMfeF3yn.js  index-D0F4O-2P.js  index-DYmv67jK.js  index-DdUvy74d.css  index-DpjQb2QQ.js  index-PfqpyKNr.js
haskell/: runner.wasm
public/: haskell-worker.js  js-worker.js  racket-worker.js  runtime-manifest.json  rustpython-worker.js  wasi-utils.js  wasm-worker.js  worker-utils.js
public/haskell/: runner.meta.json  wasi-shim.js
public/rustpython/: README.md
runtimes/haskell-ghc/: README.md  build.mjs  runner.meta.json
runtimes/haskell-runner-stub/: Cargo.toml
runtimes/racket-runtime/: build.mjs  emscripten-defs.h
runtimes/rustpython-runner/: Cargo.toml
runtimes/rustpython-runner/src/: main.rs
rustpython/: README.md
scripts/: build-ghc-wasm.mjs  build-runtimes.mjs  copy-typescript-asset.mjs  generate-runtime-manifest.mjs  racket-worker.test.mjs  smoke-check.mjs  wasm-worker.test.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/: CodeEditor.tsx  (+5 more)
(+21 files in other folders)
