[package]
name = "rustpython-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RustPython VM (note: compile time can be heavy)
# freeze-stdlib embeds the Python stdlib into the binary
rustpython-vm = { version = "0.4", default-features = true, features = ["freeze-stdlib"] }
